Fix wrong color on prime post description

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -170,7 +170,7 @@ header {
         left: 0;
         right: 0;
 
-        &, a { color: inherit; }
+        &, a { color: black; }
       }
     }
   }
